crates/snow-parser/tests/snapshots/parser_tests__comparison_eq.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a == b\")"
---
SOURCE_FILE@0..4
  BINARY_EXPR@0..4
    NAME_REF@0..1
      IDENT@0..1 "a"
    EQ_EQ@1..3 "=="
    NAME_REF@3..4
      IDENT@3..4 "b"
  EOF@4..4 ""
