crates/snow-parser/tests/snapshots/parser_tests__comparison_lt_with_arithmetic.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"x < y + 1\")"
---
SOURCE_FILE@0..5
  BINARY_EXPR@0..5
    NAME_REF@0..1
      IDENT@0..1 "x"
    LT@1..2 "<"
    BINARY_EXPR@2..5
      NAME_REF@2..3
        IDENT@2..3 "y"
      PLUS@3..4 "+"
      LITERAL@4..5
        INT_LITERAL@4..5 "1"
  EOF@5..5 ""
