crates/snow-parser/tests/snapshots/parser_tests__def_keyword.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"def greet(name) do\\n  \\\"hello\\\"\\nend\")"
---
SOURCE_FILE@0..28
  FN_DEF@0..28
    DEF_KW@0..3 "def"
    NAME@3..8
      IDENT@3..8 "greet"
    PARAM_LIST@8..14
      L_PAREN@8..9 "("
      PARAM@9..13
        IDENT@9..13 "name"
      R_PAREN@13..14 ")"
    DO_KW@14..16 "do"
    BLOCK@16..25
      NEWLINE@16..17 "\n"
      STRING_EXPR@17..24
        STRING_START@17..18 "\""
        STRING_CONTENT@18..23 "hello"
        STRING_END@23..24 "\""
      NEWLINE@24..25 "\n"
    END_KW@25..28 "end"
  EOF@28..28 ""
