crates/snow-parser/tests/snapshots/parser_tests__empty_tuple.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"()\")"
---
SOURCE_FILE@0..2
  TUPLE_EXPR@0..2
    L_PAREN@0..1 "("
    R_PAREN@1..2 ")"
  EOF@2..2 ""
