crates/snow-parser/tests/snapshots/parser_tests__error_fn_missing_name.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"fn do end\")"
---
SOURCE_FILE@0..7
  CLOSURE_EXPR@0..2
    FN_KW@0..2 "fn"
  DO_KW@2..4 "do"
  END_KW@4..7 "end"
  EOF@7..7 ""

errors:
  - expected ARROW @3..5
  - expected END_KW @3..5
