crates/snow-parser/tests/snapshots/parser_tests__error_glob_import.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "source_and_debug(\"from Math import *\")"
---
SOURCE_FILE@0..15
  FROM_IMPORT_DECL@0..14
    IDENT@0..4 "from"
    PATH@4..8
      IDENT@4..8 "Math"
    IMPORT_KW@8..14 "import"
    IMPORT_LIST@14..14
  STAR@14..15 "*"
  EOF@15..15 ""

errors:
  - glob imports are not allowed; import names explicitly @17..18
