crates/snow-parser/tests/snapshots/parser_tests__error_if_missing_end.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"if x do\\n  1\\n\")"
---
SOURCE_FILE@0..8
  IF_EXPR@0..8
    IF_KW@0..2 "if"
    NAME_REF@2..3
      IDENT@2..3 "x"
    DO_KW@3..5 "do"
    BLOCK@5..8
      NEWLINE@5..6 "\n"
      LITERAL@6..7
        INT_LITERAL@6..7 "1"
      NEWLINE@7..8 "\n"
  EOF@8..8 ""

errors:
  - expected `end` to close `do` block @12..12
