crates/snow-parser/tests/snapshots/parser_tests__error_let_missing_ident.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "block_and_debug(\"let = 5\")"
---
SOURCE_FILE@0..4
  BLOCK@0..4
    LET_BINDING@0..4
      LET_KW@0..3 "let"
      EQ@3..4 "="

errors:
  - expected identifier or pattern after `let` @4..5
