crates/snow-parser/tests/snapshots/parser_tests__error_missing_lhs.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"+\")"
---
SOURCE_FILE@0..1
  PLUS@0..1 "+"
  EOF@1..1 ""

errors:
  - expected expression @0..1
