crates/snow-parser/tests/snapshots/parser_tests__field_access_chain.snap
---
source: crates/snow-parser/tests/parser_tests.rs
expression: "parse_and_debug(\"a.b.c\")"
---
SOURCE_FILE@0..5
  FIELD_ACCESS@0..5
    FIELD_ACCESS@0..3
      NAME_REF@0..1
        IDENT@0..1 "a"
      DOT@1..2 "."
      IDENT@2..3 "b"
    DOT@3..4 "."
    IDENT@4..5 "c"
  EOF@5..5 ""
